# ramotion

./: CHANGELOG.md  README.md  ramotion.cabal
app/: Main.hs
src/: Task1.hs  Task10.hs  Task2.hs  Task3.hs  Task4.hs  Task5.hs  Task6.hs  Task7.hs  Task8.hs  Task9.hs
