cabal-version:      2.4
name:               ramotion
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Daniel Dostanich
maintainer:         dostanichdaniel@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
  exposed-modules:
    Task1
    Task2
    Task3
    Task4
    Task5
    Task6
    Task7
    Task8
    Task9
    Task10
  hs-source-dirs:
    src
  build-depends:
    base ^>=4.14.3.0
  default-language: Haskell2010

executable ramotion
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.3.0
      , ramotion
    hs-source-dirs:   app
    default-language: Haskell2010
